--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,7 @@
 *.suo
 *.VC.db
 *.VC.opendb
-
-# Fichiers de build temporaires
-Debug/
-Release/
-ipch/
-*.obj
-*.exe
-*.pdb
-*.cache
-*.log
+*.vcxproj.user
 
 # Build
 bin/
